[project]
name = "sandbox_sdk"
version = "1.2.0"
description = "The official Python library for the Sandbox SDK API"
dynamic = ["readme"]
license = "Apache-2.0"
authors = [
  { name = "Sandbox SDK", email = "" },
]

dependencies = [
  "httpx>=0.23.0, <1",
  "pydantic>=1.9.0, <3",
  "typing-extensions>=4.10, <5",
  "anyio>=3.5.0, <5",
  "distro>=1.7.0, <2",
  "sniffio",
]

requires-python = ">= 3.9"
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://github.com/sandbox-codes/sandbox-sdk-python"
Repository = "https://github.com/sandbox-codes/sandbox-sdk-python"

[project.optional-dependencies]
aiohttp = ["aiohttp", "httpx_aiohttp>=0.1.9"]

[tool.rye]
managed = true
# version pins are in requirements-dev.lock
dev-dependencies = [
  "pyright==1.1.399",
  "mypy==1.17",
  "respx",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "time-machine",
  "nox",
  "dirty-equals>=0.6.0",
  "importlib-metadata>=6.7.0",
  "rich>=13.7.1",
  "pytest-xdist>=3.6.1",
]

[tool.rye.scripts]
format = { chain = [
  "format:ruff",
  "format:docs",
  "fix:ruff",
  "format:ruff",
]}
"format:docs" = "python scripts/utils/ruffen-docs.py README.md api.md"
"format:ruff" = "ruff format"

lint = { chain = [
  "check:ruff",
  "typecheck",
  "check:importable",
]}
"check:ruff" = "ruff check ."
"fix:ruff" = "ruff check --fix ."
"check:importable" = "python -c 'import sandbox_sdk'"

typecheck = { chain = [
  "typecheck:pyright",
  "typecheck:mypy"
]}
"typecheck:pyright" = "pyright"
"typecheck:verify-types" = "pyright --verifytypes sandbox_sdk --ignoreexternal"
"typecheck:mypy" = "mypy ."

[build-system]
requires = ["hatchling==1.26.3", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "/*.toml",
  "/*.json",
  "/*.lock",
  "/*.md",
  "/mypy.ini",
  "/noxfile.py",
  "bin/*",
  "examples/*",
  "src/*",
  "tests/*",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/sandbox-codes/sandbox-sdk-python/tree/main/\g<2>)'
